# email-summarizer

./: .gitignore  Cargo.toml
src/: main.rs
