[package]
name = "email-summarizer"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = { version = "0.8.9"}
chrono = "0.4.44"
dotenv = "0.15.0"
reqwest = { version = "0.13.3", features= ["json"]}
serde = { version =  "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.52.2", features = ["full"] }
